Add user's disconnection from the lobby
